<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/login_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_launcher" />
    <!--Welcome Text-->
    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageView"
        android:text="@string/welcome_back"
        android:textColor="@color/colorBackground"
        android:textSize="25sp"
        android:textStyle="bold" />
    <!--App Name-->
    <TextView
        android:id="@+id/readItTogetherTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WelcomeTextView"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBackground"
        android:textSize="15sp" />
    <!--UserName&&Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true"
            android:theme="@style/colorAccentLite"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:theme="@style/colorAccentLite"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Remember me && Forget password-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Remember"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/forgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/forget_password"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_above="@+id/guide"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:text="@string/login"
            android:textSize="16sp"
            app:rippleColor="@color/colorAccent"
            app:elevation="10dp"
            app:cornerRadius="16dp"
            style="@style/Widget.MaterialComponents.Button" />

        <Button
            android:layout_weight="1"
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/signup"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:theme="@style/colorAccentLite"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>


    <TextView
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:visibility="invisible"
        android:text="@string/Guide"
        android:textColor="@color/colorTextView"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/LoginProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:visibility="gone" />

</RelativeLayout>