<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:orientation="vertical"
    tools:context=".ui.activity.login.LoginActivity">

    <androidx.cardview.widget.CardView
        style="@style/signupCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/img_card"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentRight="true"
                    app:cardCornerRadius="32dp">

                    <ImageView
                        android:id="@+id/user_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_account_circle_24px" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <!--Welcome Text-->
            <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcom"
                android:textColor="@color/colorBackground"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!--App Name-->
            <TextView
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <!--user name edit text-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_sign"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/CarditemMargin"
                android:hint="@string/name"
                android:theme="@style/colorAccentLite"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText_sign"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--email edit text-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_sign"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:theme="@style/colorAccentLite"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText_sign"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--password edit text-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_sign"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:theme="@style/colorAccentLite"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText_sign"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/guide"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_sign"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/AddCancel"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"
                    app:cornerRadius="16dp"
                    app:elevation="10dp"
                    android:theme="@style/colorAccentLite" />

                <Button
                    android:id="@+id/signup_sign"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:text="@string/signup"
                    android:textSize="16sp"
                    app:rippleColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>