<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/CommentCard"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="@dimen/AddCradRounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EnterTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/note"
                app:errorEnabled="true"
                android:focusableInTouchMode="true"
                android:theme="@style/colorAccentLite"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Contain 2 Buttons-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="end">

                <Button
                    android:id="@+id/interCancel"
                    android:hint="@string/comment_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/comment_Buttons" />

                <Button
                    android:id="@+id/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_ok"
                    style="@style/comment_Buttons" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>