<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        style="@style/CoarseCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Layout Contain EditText Code && Deg. && Hours -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/LayoutMargin"
                android:orientation="horizontal">

                <!--Code-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/CodeTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="@string/CoarseCode"
                    android:theme="@style/colorAccentLite"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/CoarseCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Deg.-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/DegTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="@string/CoarseDeg"
                    android:theme="@style/colorAccentLite"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/CoarseDeg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Hours-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/HourTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="@string/CoarseHours"
                    android:theme="@style/colorAccentLite"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/CoarseHours"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--Layout Contain Buttons Cancel && ADD-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/CoarseCancel"
                    style="@style/ADDButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/AddCancel" />

                <Button
                    android:id="@+id/CoarseADD"
                    style="@style/ADDButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/AddTerm" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>